# bip157-bip158-test

./: .gitignore  BIP157_BIP158_FINDINGS.md  IMPLEMENTATION_MATRIX.md  PROJECT_PLAN.md  README.md  VALIDATION_REPORT.md  flake.nix  go.mod  go.sum
adapters/kyoto/: Cargo.toml
adapters/kyoto/src/: main.rs
adapters/nakamoto/: Cargo.toml
adapters/nakamoto/src/: main.rs
adapters/neutrino/: go.mod  go.sum  main.go  main_test.go
adapters/wasabi/: AdapterState.cs  Capabilities.cs  Models.cs  Program.cs  WasabiAdapter.csproj  WasabiP2pClient.cs  prepare-source.sh
adapters/wasabi.Tests/: AdapterStateTests.cs  WasabiAdapter.Tests.csproj
adapters/wasabi/Properties/: AssemblyInfo.cs
adaptertest/fake/: server.go  server_test.go
addresslab/: addresslab.go  addresslab_test.go
api/: api.go  api_test.go
chainlab/: filter.go  filter_test.go  fixture.go  fixture_test.go
cmd/bip157-envlab/: main.go
cmd/bip157-harness/: main.go
cmd/bip157-matrix/: main.go
cmd/fake-adapter/: main.go
docs/: adapters.md  baseline-coverage.md  environments.md
environment/: environment.go  environment_test.go
harness/: report.go  runner.go  runner_test.go
matrix/: matrix.go  matrix_test.go
nix/patches/wasabi/: 0001-p2p-compact-filter-provider.patch  0002-anchor-height-one-to-genesis-filter-header.patch
overlaylab/: plan.go  plan_test.go
peerlab/: server.go  server_test.go
proto/: bip157test.proto
scenario/: catalog.go  catalog_test.go
score/: score.go  score_test.go
torlab/: control.go  control_test.go  lab.go  lab_test.go
