[package]
name = "kyoto-adapter"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
bip157 = { path = "../../../kyoto" }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }

[dev-dependencies]
tempfile = "3"
