[package]
name = "nakamoto-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
hex = "0.4"
nakamoto-client = { path = "../../../nakamoto/client" }
nakamoto-common = { path = "../../../nakamoto/common" }
nakamoto-net = { path = "../../../nakamoto/net" }
nakamoto-net-poll = { path = "../../../nakamoto/net/poll" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
